--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,13 @@
 {
-   "version":2,
-   "builds":[
-      {
-         "src":"./index.js",
-         "use":"@vercel/node"
+   "functions": {
+      "./index.js": {
+         "maxDuration": 10
       }
-   ],
-   "routes":[
+   },
+   "rewrites": [
       {
-         "src":"/(.*)",
-         "dest":"/"
+         "source": "/(.*)",
+         "destination": "/"
       }
    ]
 }
